# promise

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  bsconfig.in.json  bsconfig.json  dune  esy.json  esy.lock.json  package.json  ppx_await.opam  promise.opam  repromise.opam
.github/workflows/: test.yml
doc/docs/: api.md  design.md  interop.md  performance.md  quickstart.md  rejectable.md  whatwhy.md
doc/website/: package.json  sidebars.json  siteConfig.js
doc/website/core/: Footer.js
doc/website/pages/en/: index.js
doc/website/static/css/: custom.css
src/: io.re  io.rei  promise.re  promise.rei  repromise.rei
src/js/: dune  fs.re  fs.rei  io.re  io.rei  io_js.re  node_fs.re  node_fs.rei  node_os.re  node_os.rei  node_path.re  node_path.rei  node_process.re  node_process.rei  path.re  path.rei  process.re  promise.re  promise.rei  promise_js.re  repromise.re  repromise.rei
src/native/: accessors.c  dune  io.re  jbuild  libuv_fs.ml  libuv_fs.mli  libuv_fs.re  libuv_fs.rei  libuv_loop.ml  libuv_loop.mli  libuv_loop.re  libuv_loop.rei  mutableList.re  mutableList.rei  promise.re  promise.rei  promise_native.re  release.sh  repromise.re  repromise.rei
src/ppx/: bsconfig.json  package.json  ppx_await.re
src/ppx/bucklescript/: ppx_await.re
src/ppx/omp/: dune  jbuild  ppx_await.re
test/: bsconfig.json  dune  jbuild  package.json  test.re  test_io.re  test_main.re  test_promise.re  test_repromise.re  travis.sh
test/bundle/: control.re  dune  main_control.js  main_repromise.js  size.sh  trivial.re  uses_promise.re
test/demo/: demo.re  jbuild
test/ffi/js/: dune  test_ffi.re
test/ffi/native/: dune
test/framework/: dune  framework.re  framework.rei  jbuild
test/framework/js/: dune  run.re
test/framework/native/: dune  run.re
test/isoresult/js/: dune  isoresult.re
test/isoresult/native/: dune  isoresult.re
test/js/: benchmark.re  dune  test_ffi.re
test/native/: jbuild  test_ffi.re
