opam-version: "2.0"

synopsis: "Native implementation of a JS promise binding"

version: "dev"
license: "MIT"
homepage: "https://github.com/aantron/promise"
doc: "https://github.com/aantron/promise"
bug-reports: "https://github.com/aantron/promise/issues"

authors: "Anton Bachin <antonbachin@yahoo.com>"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
dev-repo: "git+https://github.com/aantron/promise.git"

depends: [
  "dune"
  "ocaml"
  "reason" {build & >= "3.3.2"}
  "result"
]

pin-depends: [
  ["reason.git" "git+https://github.com/facebook/reason.git"]
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "exec" "test/test_main.exe" "-p" name "-j" jobs] {with-test}
]
