opam-version: "2.0"

synopsis: "Type-safe promises for JavaScript and native code"

version: "dev"
license: "MIT"
homepage: "https://github.com/aantron/repromise"
doc: "https://github.com/aantron/repromise"
bug-reports: "https://github.com/aantron/repromise/issues"

authors: "Anton Bachin <antonbachin@yahoo.com>"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
dev-repo: "git+https://github.com/aantron/repromise.git"

depends: [
  "dune"
  "ocaml"
  "reason" {build & >= "3.0.0"}

  "bisect_ppx" {dev & >= "1.5.0"}
]

pin-depends: [
  ["bisect_ppx.git" "git+https://github.com/aantron/bisect_ppx.git"]
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
